Fixed overflow for bottom div to exclude scrolling feature

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ div.bottomdiv {
   text-align: left;
   font-weight: 200;
 	padding: 30px;
-	overflow: scroll;
+	overflow: hidden;
 	color: #215163;
 	margin:40px 50px 20px
   max-width: 50px;
